<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="20dp"
    android:background="@color/teal_200">

    <ImageView
        android:id="@+id/missed_call_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="10dp"
        android:contentDescription="@string/recycler_view_history_icon_alt"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/recycler_view_history_phone_number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/calls_count"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingVertical="20dp"
        android:gravity="center"
        android:text="@string/recycler_view_history_calls_count"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>

</LinearLayout>